--- a/src/Style/HomePage.css
+++ b/src/Style/HomePage.css
@@ -3,7 +3,7 @@
   grid-template-columns: 5fr 2fr;
   height: 100%;
   overflow: hidden;
-  transition: 0.5s all ease;
+  transition: 0.3s all ease;
   align-items: center;
 }
 
@@ -61,15 +61,29 @@
   justify-content: start;
 }
 
-.car-specs h3{
+.car-specs .heading3{
   font-size: 3rem;
   margin: 0;
+  transition: all 0.3s ease;
+}
+
+.heading3.active{
+  font-size: 2.5rem;
 }
 
 .row-inputs{
   width: 100%;
   display: flex;
   margin-bottom: 20px;
+}
+
+.row-inputs label, .row-inputs p, .row-inputs label span{
+  font-family: 'Poppins', sans-serif;
+  transition: all 0.3s ease;
+}
+
+.row-inputs.active label span{
+  font-size: 0.8rem;
 }
 
 .row-inputs.smaller{
