--- a/src/Style/DataAnalysis.css
+++ b/src/Style/DataAnalysis.css
@@ -1,6 +1,6 @@
 .data-analysis{
-  width: calc(100% - 300px);
-  margin: 0 200px 50px 60px;
+  width: calc(100% - 350px);
+  margin: 0 2500px 50px 60px;
   display: flex;
 }
 
@@ -8,12 +8,12 @@
   width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 200px;
-  gap: 50px;
-  margin: 50px;
+  gap: 20px;
+  margin: 10px 50px;
 }
 
 .plot-box {
+  cursor: pointer;
   height: 400px;
   width: 100%;
   border-radius: 20px;
@@ -25,21 +25,38 @@
   font-weight: 300;
   font-size: 1.5rem;
   font-family: 'Poppins', sans-serif;
+  transition: all 0.3s ease;
+}
+
+.data-analysis-headers{
+  grid-column: 1/5;
+  font-family: 'Poppins', sans-serif;
+  font-size: 2rem;
+  margin: 0;
+  font-weight: 200;
+}
+
+.plot-box:hover{
+  scale: 1.01;
 }
 
 .histplot{
   grid-column: 1/3;
-  grid-row: 2/3;
+  grid-row: 4/6;
 }
 
 .price-range{
-  grid-row: 2/3;
-  grid-column: 3/5;
+  grid-column: 1/5;
 }
 
 .model-ranking{
-  grid-column: 1/3;
-  height: 400px;
+  grid-column: 1/2;
+  height: 600px;
+}
+
+.model-listings{
+  grid-column: 2/5;
+  height: 600px;
 }
 
 .small-card{
@@ -69,7 +86,7 @@
   top: 0;
   bottom: 0;
   right: 0;
-  width: 200px;
+  width: 250px;
   height: 100vh;
   background-color: 	hsl(221, 100%, 61%);
 }
@@ -82,4 +99,24 @@
 .data-tabs button{
   color: white;
   margin: 10px 0;
+  padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  text-align: end;
+}
+
+.data-analysis-header{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px 0;
+  color: white;
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+.horizontal-line{
+  height: 1px;
+  width: 100%;
+  background-color: white;
 }
