--- a/src/Style/DataAnalysis.css
+++ b/src/Style/DataAnalysis.css
@@ -26,6 +26,7 @@
   font-size: 1.5rem;
   font-family: 'Poppins', sans-serif;
   transition: all 0.3s ease;
+  text-align: center;
 }
 
 .data-analysis-headers{
@@ -33,7 +34,7 @@
   font-family: 'Poppins', sans-serif;
   font-size: 2rem;
   margin: 0;
-  font-weight: 200;
+  font-weight: 500;
 }
 
 .plot-box:hover{
@@ -57,6 +58,23 @@
 .model-listings{
   grid-column: 2/5;
   height: 600px;
+}
+
+.average-price{
+  grid-column: 1/3;
+  grid-row: 8/10;
+  height: 100%;
+}
+
+.price-boxplot{
+  grid-column: 3/5;
+  grid-row: 8/9;
+  height: 500px;
+}
+
+.price-line{
+  grid-column: 3/5;
+  height: 500px;
 }
 
 .small-card{
