--- a/src/Style/DataAnalysis.css
+++ b/src/Style/DataAnalysis.css
@@ -269,7 +269,63 @@
 /* price influencers */
 
 .plot-box.heat-map{
-  grid-column: 1/4;
+  grid-column: 3/5;
   grid-row: 2/4;
   height: 600px;
 }
+
+.plot-box.map{
+  grid-column: 1/3;
+  grid-row: 2/4;
+  height: 600px;
+}
+
+.map-holder{
+
+  width: 100%;    
+  height: 100%;    
+}
+
+.map-container {
+  width: 100%;    
+  height: 100%;    
+  overflow: hidden; 
+  position: relative;
+  border-radius: 20px;
+}
+
+.custom-car-icon {
+  min-width: 50px;
+}
+
+.custom-car-icon .bubble-content {
+  background-color: blue;
+  color: white;
+  border-radius: 15px;
+  text-align: center;
+  font-size: 0.8rem;
+  font-weight: bold;
+  transition: all 0.2s ease;
+  white-space: nowrap;
+  z-index: 1000;
+  display: inline-block;
+  padding: 5px 10px;
+  position: relative;
+  transform: translateX(-50%);
+  opacity: 0.6;
+}
+
+.leaflet-marker-icon {
+  z-index: 1000 !important;
+}
+
+.leaflet-marker-pane .leaflet-marker-icon:hover {
+  z-index: 2000 !important;
+}
+
+.custom-car-icon .bubble-content:hover {
+  padding: 10px 20px;
+  min-width: 100px;
+  opacity: 1;
+}
+
