changed style of map

--- a/src/Style/DataAnalysis.css
+++ b/src/Style/DataAnalysis.css
@@ -280,6 +280,11 @@
   height: 600px;
 }
 
+.plot-box.map:hover .map-holder{
+  outline: none !important;
+  border: none !important;
+}
+
 .map-holder{
 
   width: 100%;    
