--- a/src/Style/DataAnalysis.css
+++ b/src/Style/DataAnalysis.css
@@ -269,15 +269,39 @@
 /* price influencers */
 
 .plot-box.heat-map{
-  grid-column: 3/5;
+  grid-column: 1/4;
   grid-row: 2/4;
   height: 600px;
 }
 
 .plot-box.map{
-  grid-column: 1/3;
+  grid-column: 3/5;
   grid-row: 2/4;
   height: 600px;
+}
+
+.plot-box.line-plot{
+  grid-column: 1/3;
+  grid-row: 4/5;
+  height: 500px;
+}
+
+.plot-box.pie-plot{
+  grid-column: 4/5;
+  grid-row: 2/4;
+  height: 600px;
+}
+
+.plot-box.bar-chart{
+  grid-column: 3/5;
+  grid-row: 4/6;
+  height: 500px;
+}
+
+.plot-box.bar-chart-2{
+  grid-column: 1/3;
+  grid-row: 6/7;
+  height: 700px;
 }
 
 .plot-box.map:hover .map-holder{
