--- a/src/Style/DataAnalysis.css
+++ b/src/Style/DataAnalysis.css
@@ -74,6 +74,11 @@
   grid-row: 4/6;
 }
 
+.histplot.quick-overview{
+  grid-column: 3/5;
+  grid-row: 5/6;
+}
+
 .price-range{
   grid-column: 1/5;
 }
@@ -81,6 +86,11 @@
 .model-ranking{
   grid-column: 1/2;
   height: 600px;
+}
+
+.model-ranking.quick-overview{
+  grid-row: 4/5;
+  height: 400px;
 }
 
 .model-listings{
@@ -103,6 +113,11 @@
 .price-line{
   grid-column: 3/5;
   height: 500px;
+}
+
+.price-line.quick-overview{
+  grid-column: 2/4;
+  height: 400px;
 }
 
 .small-card{
@@ -151,6 +166,16 @@
   display: flex;
   justify-content: space-between;
   text-align: end;
+  transition: all 0.3s ease;
+}
+
+.data-tabs-button:hover{
+  background-color: hsl(221, 100%, 45%) !important;
+  scale: 1.1;
+}
+
+.data-tabs-button.active{
+  background-color: hsl(221, 100%, 55%);
 }
 
 .data-analysis-header{
@@ -280,6 +305,12 @@
   height: 600px;
 }
 
+.plot-box.map-quick-overview{
+  grid-column: 1/3;
+  grid-row: 2/4;
+  height: 600px;
+}
+
 .plot-box.line-plot{
   grid-column: 1/3;
   grid-row: 4/5;
@@ -292,10 +323,21 @@
   height: 600px;
 }
 
+.pie-plot.quick-overview{
+  grid-row: 4/5;
+  height: 400px;
+}
+
 .plot-box.bar-chart{
   grid-column: 3/5;
   grid-row: 4/6;
   height: 500px;
+}
+
+.bar-chart.quick-overview{
+  grid-column: 1/3;
+  grid-row: 5/6;
+  height: 400px;
 }
 
 .plot-box.bar-chart-2{
