--- a/src/Style/DataAnalysis.css
+++ b/src/Style/DataAnalysis.css
@@ -1,11 +1,11 @@
-.data-analysis{
+.data-analysis {
   width: calc(100% - 250px);
   display: flex;
   margin-top: 5px;
   margin-left: 50px;
 }
 
-.data-analysis-container{
+.data-analysis-container {
   width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -25,13 +25,13 @@
   padding: 20px;
   font-weight: 300;
   font-size: 1.5rem;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   transition: all 0.3s ease;
   text-align: center;
   position: relative;
 }
 
-.get-prediction{
+.get-prediction {
   position: absolute;
   opacity: 0;
   width: 0;
@@ -40,11 +40,12 @@
   z-index: 1000;
 }
 
-.get-prediction.data-card{
+.get-prediction.data-card {
   margin: 15px;
 }
 
-.plot-holder:hover .get-prediction, .small-card:hover .get-prediction{
+.plot-holder:hover .get-prediction,
+.small-card:hover .get-prediction {
   position: absolute;
   top: 0;
   right: 0;
@@ -53,74 +54,74 @@
   height: 30px;
 }
 
-.plot-holder .get-prediction:hover{
+.plot-holder .get-prediction:hover {
   scale: 1.1;
 }
 
-.data-analysis-headers{
+.data-analysis-headers {
   grid-column: 1/5;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 2rem;
   margin: 0;
   font-weight: 500;
 }
 
-.plot-box:hover{
+.plot-box:hover {
   scale: 1.01;
 }
 
-.histplot{
+.histplot {
   grid-column: 1/3;
   grid-row: 4/6;
 }
 
-.histplot.quick-overview{
+.histplot.quick-overview {
   grid-column: 3/5;
   grid-row: 5/6;
 }
 
-.price-range{
+.price-range {
   grid-column: 1/5;
 }
 
-.model-ranking{
+.model-ranking {
   grid-column: 1/2;
   height: 600px;
 }
 
-.model-ranking.quick-overview{
+.model-ranking.quick-overview {
   grid-row: 4/5;
   height: 400px;
 }
 
-.model-listings{
+.model-listings {
   grid-column: 2/5;
   height: 600px;
 }
 
-.average-price{
+.average-price {
   grid-column: 1/3;
   grid-row: 7/9;
   height: 100%;
 }
 
-.price-boxplot{
+.price-boxplot {
   grid-column: 3/5;
   grid-row: 7/8;
   height: 500px;
 }
 
-.price-line{
+.price-line {
   grid-column: 3/5;
   height: 500px;
 }
 
-.price-line.quick-overview{
+.price-line.quick-overview {
   grid-column: 2/4;
   height: 400px;
 }
 
-.small-card{
+.small-card {
   padding: 20px;
   transition: all 0.3s ease;
   cursor: pointer;
@@ -128,22 +129,22 @@
   overflow: hidden;
 }
 
-.small-card:hover{
+.small-card:hover {
   scale: 1.05;
 }
 
-.small-card div, .small-card h4{
-  font-family: 'Poppins', sans-serif;
+.small-card div,
+.small-card h4 {
+  font-family: "Poppins", sans-serif;
 }
 
-.bar-title{
+.bar-title {
   height: 50px;
 }
 
-
 /* right side */
 
-.right-side-data-analysis{
+.right-side-data-analysis {
   position: fixed;
   transform: rotate(0);
   top: 0;
@@ -151,15 +152,15 @@
   right: 0;
   width: 250px;
   height: 100vh;
-  background-color: 	hsl(221, 100%, 61%);
+  background-color: hsl(221, 100%, 61%);
 }
 
-.data-tabs{
+.data-tabs {
   display: flex;
   flex-direction: column;
 }
 
-.data-tabs button{
+.data-tabs button {
   color: white;
   margin: 10px 0;
   padding: 10px 20px;
@@ -169,16 +170,16 @@
   transition: all 0.3s ease;
 }
 
-.data-tabs-button:hover{
+.data-tabs-button:hover {
   background-color: hsl(221, 100%, 70%) !important;
   scale: 1.1;
 }
 
-.data-tabs-button.active{
+.data-tabs-button.active {
   background-color: hsl(221, 100%, 55%);
 }
 
-.data-analysis-header{
+.data-analysis-header {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -188,7 +189,7 @@
   font-weight: 500;
 }
 
-.horizontal-line{
+.horizontal-line {
   height: 1px;
   width: 100%;
   background-color: white;
@@ -196,7 +197,7 @@
 
 /* top navbar */
 
-.data-analysis-top-navbar{
+.data-analysis-top-navbar {
   position: fixed;
   padding: 30px 15px 15px 15px !important;
   display: flex;
@@ -208,24 +209,24 @@
   cursor: pointer;
 }
 
-.data-analysis-top-navbar.logos:hover{
+.data-analysis-top-navbar.logos:hover {
   left: -100px;
 }
 
-.data-analysis-top-navbar.logos{
+.data-analysis-top-navbar.logos {
   top: 80px;
   left: -115px;
   height: 200px;
   align-items: end;
   justify-content: center;
 }
-.data-analysis-top-navbar.heading{
+.data-analysis-top-navbar.heading {
   top: 400px;
   left: -130px;
   height: 100px;
 }
 
-.data-analysis-top-navbar img{
+.data-analysis-top-navbar img {
   height: 50px;
   margin: 0;
   padding: 0;
@@ -236,27 +237,27 @@
   transition: all 0.3 ease;
 }
 
-.data-selected-logo{
+.data-selected-logo {
   opacity: 1 !important;
   scale: 1.1;
 }
 
-.data-analysis-top-navbar img:hover{
+.data-analysis-top-navbar img:hover {
   transform: rotate(90deg);
   scale: 1.1;
 }
 
-.data-analysis-top-navbar span{
+.data-analysis-top-navbar span {
   font-size: 1.7rem;
   margin-right: 30px;
   margin-left: 30px;
 }
 
-.plot-holder{
+.plot-holder {
   position: relative !important;
 }
 
-.plot-description{
+.plot-description {
   position: absolute;
   height: 100%;
   overflow-y: scroll;
@@ -266,15 +267,15 @@
   background-color: black;
   border-radius: 10px;
   scrollbar-width: none; /* For Firefox */
-  -ms-overflow-style: none;  /* For Internet Explorer and Edge */
+  -ms-overflow-style: none; /* For Internet Explorer and Edge */
 }
 
-.plot-description.data-card{
+.plot-description.data-card {
   margin: 15px;
   height: 90%;
 }
 
-.plot-description.data-card h3{
+.plot-description.data-card h3 {
   margin-top: 0;
 }
 
@@ -282,85 +283,84 @@
   display: none; /* For Chrome, Safari, and Opera */
 }
 
-.plot-description h3{
+.plot-description h3 {
   font-size: 1.5rem;
 }
 
-.plot-description p{
+.plot-description p {
   font-size: 1.2rem;
   text-align: start;
 }
 
 /* price influencers */
 
-.plot-box.heat-map{
+.plot-box.heat-map {
   grid-column: 1/4;
   grid-row: 2/4;
   height: 600px;
 }
 
-.plot-box.map{
+.plot-box.map {
   grid-column: 3/5;
   grid-row: 2/4;
   height: 600px;
 }
 
-.plot-box.map-quick-overview{
+.plot-box.map-quick-overview {
   grid-column: 1/3;
   grid-row: 2/4;
   height: 600px;
 }
 
-.plot-box.line-plot{
+.plot-box.line-plot {
   grid-column: 1/3;
   grid-row: 4/5;
   height: 500px;
 }
 
-.plot-box.pie-plot{
+.plot-box.pie-plot {
   grid-column: 4/5;
   grid-row: 2/4;
   height: 600px;
 }
 
-.pie-plot.quick-overview{
+.pie-plot.quick-overview {
   grid-row: 4/5;
   height: 400px;
 }
 
-.plot-box.bar-chart{
+.plot-box.bar-chart {
   grid-column: 3/5;
   grid-row: 4/6;
   height: 500px;
 }
 
-.bar-chart.quick-overview{
+.bar-chart.quick-overview {
   grid-column: 1/3;
   grid-row: 5/6;
   height: 400px;
 }
 
-.plot-box.bar-chart-2{
+.plot-box.bar-chart-2 {
   grid-column: 1/3;
   grid-row: 6/7;
   height: 700px;
 }
 
-.plot-box.map:hover .map-holder{
+.plot-box.map:hover .map-holder {
   outline: none !important;
   border: none !important;
 }
 
-.map-holder{
-
-  width: 100%;    
-  height: 100%;    
+.map-holder {
+  width: 100%;
+  height: 100%;
 }
 
 .map-container {
-  width: 100%;    
-  height: 100%;    
-  overflow: hidden; 
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
   position: relative;
   border-radius: 20px;
 }
@@ -399,4 +399,3 @@
   min-width: 100px;
   opacity: 1;
 }
-
