--- a/src/Style/UpdateData.css
+++ b/src/Style/UpdateData.css
@@ -1,4 +1,4 @@
-.update-data-container{
+.update-data-container {
   display: grid;
   grid-template-columns: 5fr 2fr;
   height: 100%;
@@ -7,16 +7,16 @@
   align-items: center;
 }
 
-.update-data-right-side{
+.update-data-right-side {
   position: relative;
-  background-color: 	hsl(221, 100%, 61%);
+  background-color: hsl(221, 100%, 61%);
   transform: rotate(30deg);
   width: 160%;
   height: 170%;
   transition: 0.5s all ease;
 }
 
-.update-data-default-car{
+.update-data-default-car {
   position: absolute;
   top: 55%;
   right: 30%;
@@ -26,144 +26,154 @@
 }
 
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 .container {
-	display:flex;
-	flex-direction:column;
-	width:100%;
-	min-height:100vh;
-	font-family:sans-serif;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-height: 100vh;
+  font-family: sans-serif;
   padding: 0 250px 0 150px;
-	h1 {
-		position:relative;
-		font-size:2.5em;
-		margin:1.5em auto 3em;
-		color:#0288D1;
-		text-transform:uppercase;
-		&:after {
-			content:'';
-			display:block;
-			position:absolute;
-			top:100%;
-			left:0;
-			margin:.25em 0 0;
-			height:2px;
-			width:0;
-			background:#0288D1;
-			transition: width .5s cubic-bezier(1,0,.5,1.01);
-		}
-	}
-	&.load h1:after {
-		width:100%;
-	}
-	nav {
-		position:relative;
-		width:600px;
-		margin:0 auto 60px;
-		display:flex;
-		justify-content:space-between;
-		
-		a {
-			position:relative;
-			display:flex;
-			flex-direction:column;
-			text-decoration:none;
-			color:#03A9F4;
-			text-align:center;
-			i {
-				display:block;
-				position:absolute;
-				left: 50%;
-    			bottom: 0;
-				margin-bottom:20px;
-				transform:translateX(-50%);
-				opacity:0;
-				transition: opacity .3s ease-out, bottom .5s ease;
-			}
-			&:hover > i {
-				opacity:1;
-				bottom: 100%;
-			}
-			&.active > i {
-				color:#0288D1;
-				opacity:1;
-				bottom: 100%;
-			}
-			span {
-				display:block;
-				position:absolute;
-				left: 50%;
-    			top: 100%;
-				width: 80px;
-				margin-top:20px;
-				opacity:0;
-				transform:translateX(-50%);
-				text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
-				transition: opacity .3s ease-out, bottom .5s ease;
-			}
-			&:hover > span {
-				opacity:1;
-				top: 100%;
-			}
-			&.active > span {
-				color:#0288D1;
-				opacity:1;
-				top: 100%;
-			}
-			&:after {
-				content:'';
-				display:block;
-				position:absolute;
-				top:50%;
-				left:50%;
-				width:80px;
-				height:60px;
-				transform:translate(-50%,-50%);
-			}
-			&:before {
-				content:'';
-				z-index:99;
-				display:block;
-				width:5px;
-				height:5px;
-				border-radius:50%;
-				margin:auto;
-				box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2), 0 0 0 4px #03A9F4;
-				background:#ffffff;
-				transition: box-shadow .3s cubic-bezier(.75,0,.24,1);
-			}
-			&:not(.active):hover:before{
-				box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2), 0 0 0 5px #03A9F4;
-			}
-			&.active:before {
-				box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2), 0 0 0 10px #0288D1;
-			}
-			&:first-child.active ~ .line {
-				width:0;
-			}
-			&:nth-child(2).active ~ .line {
-				width:34%;
-			}
-			&:nth-child(3).active ~ .line {
-				width:66%;
-			}
-			&:nth-child(4).active ~ .line {
-				width:100%;
-			}
-		}
-		.line {
-			display:block;
-			position:absolute;
-			top:0;
-			bottom:0;
-			left:0;
-			margin:auto;
-			z-index:-1;
-			width:0;
-			height:2px;
-			background:#0288D1;
-			transition: width .5s cubic-bezier(1,0,.5,1.01);
-		}
-	}
+  h1 {
+    position: relative;
+    font-size: 2.5em;
+    margin: 1.5em auto 3em;
+    color: #0288d1;
+    text-transform: uppercase;
+    &:after {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      margin: 0.25em 0 0;
+      height: 2px;
+      width: 0;
+      background: #0288d1;
+      transition: width 0.5s cubic-bezier(1, 0, 0.5, 1.01);
+    }
+  }
+  &.load h1:after {
+    width: 100%;
+  }
+  nav {
+    position: relative;
+    width: 600px;
+    margin: 0 auto 60px;
+    display: flex;
+    justify-content: space-between;
+
+    a {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      text-decoration: none;
+      color: #03a9f4;
+      text-align: center;
+      i {
+        display: block;
+        position: absolute;
+        left: 50%;
+        bottom: 0;
+        margin-bottom: 20px;
+        transform: translateX(-50%);
+        opacity: 0;
+        transition:
+          opacity 0.3s ease-out,
+          bottom 0.5s ease;
+      }
+      &:hover > i {
+        opacity: 1;
+        bottom: 100%;
+      }
+      &.active > i {
+        color: #0288d1;
+        opacity: 1;
+        bottom: 100%;
+      }
+      span {
+        display: block;
+        position: absolute;
+        left: 50%;
+        top: 100%;
+        width: 80px;
+        margin-top: 20px;
+        opacity: 0;
+        transform: translateX(-50%);
+        text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+        transition:
+          opacity 0.3s ease-out,
+          bottom 0.5s ease;
+      }
+      &:hover > span {
+        opacity: 1;
+        top: 100%;
+      }
+      &.active > span {
+        color: #0288d1;
+        opacity: 1;
+        top: 100%;
+      }
+      &:after {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 80px;
+        height: 60px;
+        transform: translate(-50%, -50%);
+      }
+      &:before {
+        content: "";
+        z-index: 99;
+        display: block;
+        width: 5px;
+        height: 5px;
+        border-radius: 50%;
+        margin: auto;
+        box-shadow:
+          0 2px 4px rgba(0, 0, 0, 0.2),
+          0 0 0 4px #03a9f4;
+        background: #ffffff;
+        transition: box-shadow 0.3s cubic-bezier(0.75, 0, 0.24, 1);
+      }
+      &:not(.active):hover:before {
+        box-shadow:
+          0 2px 4px rgba(0, 0, 0, 0.2),
+          0 0 0 5px #03a9f4;
+      }
+      &.active:before {
+        box-shadow:
+          0 2px 4px rgba(0, 0, 0, 0.2),
+          0 0 0 10px #0288d1;
+      }
+      &:first-child.active ~ .line {
+        width: 0;
+      }
+      &:nth-child(2).active ~ .line {
+        width: 34%;
+      }
+      &:nth-child(3).active ~ .line {
+        width: 66%;
+      }
+      &:nth-child(4).active ~ .line {
+        width: 100%;
+      }
+    }
+    .line {
+      display: block;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      margin: auto;
+      z-index: -1;
+      width: 0;
+      height: 2px;
+      background: #0288d1;
+      transition: width 0.5s cubic-bezier(1, 0, 0.5, 1.01);
+    }
+  }
 }
