--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -12,30 +12,29 @@ body {
   margin-bottom: 500px;
 }
 
-.App{
+.App {
   height: 100vh;
   font-family: "Poppins", sans-serif;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-.theme-change{
+.theme-change {
   position: absolute;
   bottom: 15px;
   left: 20px;
 }
 
-#root{
+#root {
   width: 100%;
 }
 
-.home-page-bloomteq-symbol{
+.home-page-bloomteq-symbol {
   height: 80px;
   position: fixed;
   bottom: 0;
   right: 15px;
 }
-
