--- a/src/Style/Chat.css
+++ b/src/Style/Chat.css
@@ -31,13 +31,21 @@
   align-items: start;
   border-radius: 10px;
   overflow-y: scroll;
-  scrollbar-width: none; /* For Firefox */
-  -ms-overflow-style: none; /* For Internet Explorer and Edge */
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  scroll-behavior: smooth;
 }
 
 .chat-messages::-webkit-scrollbar {
-  display: none; /* For Chrome, Safari, and Opera */
+  display: none;
 }
+
+#bottom-of-chat {
+  width: 100%;
+  height: 1px;
+}
+
+
 
 .chat-input-container {
   display: flex;
