--- a/src/Style/DataAnalysis.css
+++ b/src/Style/DataAnalysis.css
@@ -172,7 +172,7 @@
 
 .data-tabs-button:hover {
   background-color: hsl(221, 100%, 70%) !important;
-  scale: 1.1;
+  transform: translateX(-10px);
 }
 
 .data-tabs-button.active {
@@ -398,4 +398,11 @@
   padding: 10px 20px;
   min-width: 100px;
   opacity: 1;
+}
+
+/* read data - tables */
+
+.table-data-container{
+  width: 100%;
+  height: 100%;
 }
