--- a/src/Style/UpdateData.css
+++ b/src/Style/UpdateData.css
@@ -227,6 +227,7 @@
 .update-data-button{
   height: 50px;
   margin-bottom: 20px !important;
+  margin-right: 20px !important;
 }
 
 .train-model{
@@ -236,11 +237,32 @@
   font-size: 1.3rem;
 }
 
+.model-selector{
+  margin-bottom: 15px !important;
+}
+
 .train-model label{
   margin-bottom: 15px;
 }
 
+.train-model
+
 .train-model-buttons button{
   margin: 15px 15px 0 0;
   height: 50px;
+}
+
+.MuiCheckbox-root.Mui-disabled,
+.MuiCheckbox-root.Mui-disabled {
+  color: hsl(221, 100%, 61%) !important;
+  opacity: 1;
+}
+
+.checkbox-container {
+  display: flex;
+  align-items: center;
+}
+
+.checkbox-container span {
+  margin-left: 8px;
 }
