--- a/src/Style/UpdateData.css
+++ b/src/Style/UpdateData.css
@@ -266,3 +266,29 @@
 .checkbox-container span {
   margin-left: 8px;
 }
+
+.model-metrics span {
+  margin-right: 20px;
+  cursor: pointer;
+  position: relative;
+}
+
+.tooltip {
+  display: none;
+  position: absolute;
+  background-color: #333;
+  color: #fff;
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 0.8em;
+  top: -50px;
+  left: 50%;
+  transform: translateX(-50%);
+  white-space: nowrap;
+  z-index: 1000;
+}
+
+.model-metrics span:hover .tooltip {
+  display: block;
+  font-size: 1.2rem;
+}
