--- a/src/Style/Chat.css
+++ b/src/Style/Chat.css
@@ -45,8 +45,6 @@
   height: 1px;
 }
 
-
-
 .chat-input-container {
   display: flex;
   align-items: center;
@@ -114,6 +112,7 @@
   background-color: rgba(0, 0, 255, 0.7);
   align-self: flex-end;
   margin-left: 10%;
+  color: white;
 }
 
 .ai-message {
