--- a/src/Style/Chat.css
+++ b/src/Style/Chat.css
@@ -24,16 +24,17 @@
 
 .chat-messages {
   width: 100%;
-  height: 100%;
+  flex-grow: 1;
+  max-height: calc(100% - 120px);
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: start;
   border-radius: 10px;
-  overflow-y: scroll;
+  overflow-y: auto;
   scrollbar-width: none;
   -ms-overflow-style: none;
-  scroll-behavior: smooth;
+  scroll-snap-type: y mandatory;
 }
 
 .chat-messages::-webkit-scrollbar {
@@ -106,6 +107,7 @@
   padding: 10px;
   border-radius: 10px;
   margin: 10px 0;
+  scroll-snap-align: end;
 }
 
 .my-message {
