--- a/src/Style/UpdateData.css
+++ b/src/Style/UpdateData.css
@@ -63,11 +63,12 @@
     margin: 0 auto 60px;
     display: flex;
     justify-content: space-between;
-    a {
+    div:nth-child(1), div:nth-child(2), div:nth-child(3), div:nth-child(4) {
       position: relative;
       display: flex;
       flex-direction: column;
       text-decoration: none;
+      cursor: pointer;
       color: #03a9f4;
       text-align: center;
       i {
