--- a/src/Style/Chat.css
+++ b/src/Style/Chat.css
@@ -215,3 +215,11 @@
 .open-chat:hover {
   scale: 1.1;
 }
+
+@media only screen and (max-width: 600px) {
+  .open-chat {
+    bottom: 15px;
+    right: 15px;
+    z-index: 1002;
+  }
+}
